--- a/primiero.bib
+++ b/primiero.bib
@@ -13758,6 +13758,26 @@
   bibfiles = {dirk}
 }
 
+@article{Batens:LogiqueAnalyse:2001,
+  author = {Batens, Diderik  and Provijn, Dagmar},
+  title = {Pushing the Search Paths in the Proofs. A Study in Proof Heuristics},
+  journal = {Logique \& Analyse},
+  uuid = {C1DD643E-6E08-4A5D-9D5B-9A6E7A5D8E38},
+  volume = {44},
+  number = {173-175},
+  pages = {113-134},
+  year = {2001},
+  sentelink = {syncii:///Pushing%20the%20Search%20Paths%20in%20the%20Proofs.%20A%20Study%20in.pdf,Sente,},
+  url = {},
+  source_app = {EndNote},
+  EndNote_reference_number = {95},
+  label = {BatPro01},
+  Secondary_title = {Logique \&amp; Analyse},
+  Citation_identifier = {Batens 2001f},
+  publicationStatus = {Unknown},
+  abstract = {Introducing techniques deriving from dynamic proofs in proofs for propositional classical logic is shown to lead to a proof format that enables one to push search paths into the proofs themselves. The resulting goal directed proof format is shown to provide a decision method for A1, . . .An ` B and a positive test for}
+}
+
 @ARTICLE{DaJ:compat,
   author = {Dagmar Provijn and Joke Meheus},
   title = {Direct Dynamic Proofs for Classical compatibility},
