--- a/primiero.bib
+++ b/primiero.bib
@@ -3646,6 +3646,27 @@
   bibfiles = {dirk}
 }
 
+@article{Batens:Synthese:2000,
+  author = {Batens, Diderik},
+  title = {Minimally Abnormal Models in Some Adaptive Logics},
+  journal = {Synthese},
+  uuid = {A40E5381-FD0B-4FD5-BEB6-452E7C6718B5},
+  volume = {125},
+  number = {1},
+  pages = {5-18},
+  year = {2000},
+  sentelink = {file:///Users/patrickallo/Documents/_ARCHIVE/SenteBib/SenteBibSync.sente6lib/Contents/Attachments/Batens%2C%20D/2000/Minimally%20Abnormal%20Models%20in%20S.pdf,Sente,},
+  url = {},
+  source_app = {EndNote},
+  EndNote_reference_number = {463},
+  label = {Bat00c},
+  Secondary_title = {Synthese},
+  Citation_identifier = {Batens 2000b},
+  publicationStatus = {Unknown},
+  abstract = {In an adaptive logic APL, based on a (monotonic) non-standard logic PL, the consequences of 0 can be defined in terms of a selection of the PL-models of 0. An important property of the adaptive logics ACLuN1, ACLuN2, ACLuNs1, and ACLuNs2 logics is proved: whenever a model is not selected, this is justified in terms of a selected model (Strong Reassurance). The property fails for Priest’s LPm because its way of measuring the degree of abnormality of a model is incoherent – correcting this delivers the property.}
+}
+
+
 @INCOLLECTION{batens89,
   author = {D. Batens},
   title = {Dynamic Dialectical Logics},
