--- a/note1.tex
+++ b/note1.tex
@@ -899,7 +899,8 @@ $Sf(\Gamma)=\bigcup_{\phi \in \Gamma} \{\psi \mid \psi$ is a subformula of $ \ph
 From $Sf(\Gamma)$ we then construe all the possible abnormalities which can be obtained by its members:
 
 \begin{definition}[Abnormalities relevant to the premise set]
-$\Omega(\Gamma)=\{\psi\wedge \neg \psi \mid \psi\in Sf(\Gamma)\}$. (Note: when a restriction applies to the formation of $\Omega$, the same restriction should also apply to $\Omega(\Gamma)$)
+$\Omega(\Gamma)=\{\psi\wedge \neg \psi \in \Omega \mid \psi\in Sf(\Gamma)\}$. 
+%(Note: when a restriction applies to the formation of $\Omega$, the same restriction should also apply to $\Omega(\Gamma)$)
 \end{definition}
 %\begin{definition}
 %Let $P$ be a proof-tree of {\sf AdaptiveND}. We call $P^{\sf ext}$ the complete extension of $P$ at stage {\sf s} if $P^{\sf ext}$ extends $P$ by a possibly infinite number of derivation steps such that 
