Fixed error in proof of thm 3

--- a/note1.tex
+++ b/note1.tex
@@ -177,7 +177,7 @@ Middlesex University London\\
 \maketitle
 
 \begin{abstract}
-We present a multi-conclusion natural deduction calculus characterizing the dynamic reasoning typical of adaptive logics. The resulting system {\sf AdaptiveND} is sound and complete with respect to the propositional fragment of adaptive logic \textbf{CLuN$^r$}. This appears to be the first tree-format presentation of the standard linear dynamic proof system typical of Adaptive Logics. It offers the advantage of full transparency in the formulation of locally derivable rules, connection between restricted inference rules and their adaptive counterpart, and the formulation of abnormalities as a subtype of well-formed formulas. These features of the proposed calculus are used to reconsider the question of classical recapture. 
+We present a multi-conclusion natural deduction calculus characterizing the dynamic reasoning typical of adaptive logics. The resulting system {\sf AdaptiveND} is sound and complete with respect to the propositional fragment of adaptive logic \textbf{CLuN$^r$}. This appears to be the first tree-format presentation of the standard linear dynamic proof system typical of Adaptive Logics. It offers the advantage of full transparency in the formulation of locally derivable rules, a connection between restricted inference rules and their adaptive counterpart, and the formulation of abnormalities as a subtype of well-formed formulas. These features of the proposed calculus are used to reconsider the question of classical recapture. 
 \end{abstract}
 
 \section{Intro}
@@ -941,7 +941,7 @@ For \textsf{AdaptiveND} and \textbf{CLuN$^r$} the requirement that all $\psi\wed
             \item $\neg \phi$ can be obtained by ($\neg$I) from $\phi$ on the left.
         \end{enumerate*}
         Cases (a-c) imply that $\neg \phi$ should be a positive part of a previously derived formula on the right, and hence $\phi$ should be a negative part of that formula. By induction over the length of proofs (with the rule {\sf PREM}  as the base-case), these three cases can be retraced to $\phi$ being a negative part of some premise.
-    \item Case (d) requires the deduction of some $\phi$ on the left, which can only result from either ($\to$I) or ({\sf WL}). In the latter case, we need to note that an application of ({\sf WL}) can never lead to a judgement where (i) the left-side only includes the premise-set, and (ii) the right-side has no more formulae than before the application of ({\sf WL}). This implies that ({\sf WL}) cannot be used to deduce a minimal disjunction of abnormalities that wasn't already derivable without. In the former case, this means that some $\phi \to \psi$ was previously derived on the right. Again, this case can be reduced to $\phi$ being a negative part of some premise. 
+    \item Case (d) requires the presence or deduction of some $\phi$ on the left, either because the left-hand side is of the form $\Gamma, \phi$ and thus the result of applying (\textsf{WL}), or because it is of the form $\Gamma$ with $\phi \in \Gamma$. In each of these cases, this can never lead to a judgement where (i) the left-side consists only of the premise-set, and (ii) the right-side has no more formulae than before the application of ($\neg$I). This implies that case (d) cannot lead to the deduction of a minimal disjunction of abnormalities.
 \end{enumerate*}
 From (3) and (4) it follows that every abnormality that occurs in a minimal disjunction of abnormalities obtains from a formula that occurs as the negative part of some premise. A fortiori, this means it should be formed from a member of $\Omega(\Gamma)$.\qed
 
