modified side condition M2

--- a/submission/AdaptiveND_PrimieroAllo_revised.tex
+++ b/submission/AdaptiveND_PrimieroAllo_revised.tex
@@ -738,7 +738,7 @@ Choice sets provide selections of abnormalities that might turn out to be true a
 \infer*[right=$\XBox$M2]{\Turn{\Gamma;\cdot}{\Delta^{min}}\\
 \TurnPrime{\Gamma; \phi^{-}}{\psi} \\
 \TurnPrimePrime{\Gamma; \xi^{-}}{\psi} \\
-{\exists \Delta^{min}\in \Phi_{s}(\Gamma)\supset\xi}}
+{\exists \Delta^{min}\in \Phi_{s}(\Gamma)\supset\xi\supseteq \phi}}
 {\TurnMaxTwoPlusOneMA{\Gamma}{\psi}}
 \end{mathpar}
 
